# interactive-computer-graphics

./: .gitignore
lab1/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
lab4/: CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h
lab5/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
lab6/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
lab6/resources/: control_points.txt  control_points2.txt
lab7/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
lab8/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
